snapshots/care/data4life/hc-result-sdk-kmp/error/0.3.0-SNAPSHOT/maven-metadata.xml.sha256
8d822c59fb78b2a4fe1d7bdc48b14327d2e3cd7ad084a2bba1458fb96c9c1e7a